# ssd-kv

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  OPTIMIZATIONS.md  README.md  docker-compose.yml  prompt.txt  run_claude_in_5h.sh
benches/: throughput.rs
benchmark/: auto-claude.sh  bench_client.rs  comparison_bench.rs  run_comparison.sh  throughput_ceiling.sh  udp_bench.rs  validation_test.rs
benchmark/auto-claude-cli/: README.md  agents.go  checks.go  coderabbit.go  go.mod  main.go  prompts.go  types.go  utils.go  workflow.go
operator/: Cargo.toml  Dockerfile  controller.go  go.mod  main.go  resources.go  types.go
operator-go/deploy/: crd.yaml  operator.yaml
operator/crds/: ssdkv-cluster.yaml
operator/deploy/: crd.yaml  rbac.yaml  sample-cluster.yaml
operator/src/: controller.rs  main.rs  resources.rs  shard_manager.rs
src/: config.rs  lib.rs  main.rs
src/cluster/: health.rs  mod.rs  node.rs  peer_pool.rs  rebalance.rs  replication.rs  router.rs  topology.rs
src/engine/: index.rs  index_entry.rs  lockfree_index.rs  mod.rs  recovery.rs  shard_per_core.rs
src/io/: aligned_buf.rs  async_reader.rs  io_pool.rs  mod.rs  uring.rs  uring_net.rs
src/perf/: af_xdp.rs  batch_writer.rs  busy_poll.rs  hot_cache.rs  huge_pages.rs  latency_hist.rs  mod.rs  numa.rs  object_pool.rs  prefetch.rs  simd.rs  xdp.rs
src/server/: async_tcp.rs  db_manager.rs  handler.rs  hash.rs  mod.rs  pipeline.rs  protocol.rs  reactor.rs  redis.rs  set.rs  tcp.rs  udp.rs  uring_server.rs
src/storage/: compaction.rs  direct_io.rs  eviction.rs  file_manager.rs  memory_store.rs  mod.rs  record.rs  wal.rs  wblock_cache.rs  write_buffer.rs
tests/: cluster_integration.rs  multi_reactor_smoke.rs  parallel_wal_shards.rs  reactor_smoke.rs  wal_chaos.rs  wal_odirect.rs  wal_recovery.rs
