[package]
name = "ssd-kv"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
parking_lot = "0.12"
crc32fast = "1.3"
mimalloc = { version = "0.1", default-features = false }
bytes = "1.5"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
crossbeam-channel = "0.5"
memmap2 = "0.9"
libc = "0.2"
once_cell = "1.19"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6"
aya = { version = "0.12", optional = true }
aya-log = { version = "0.2", optional = true }

[features]
default = []
ebpf = ["aya", "aya-log"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"

[[bench]]
name = "throughput"
harness = false

[[bin]]
name = "bench_client"
path = "benchmark/bench_client.rs"

[[bin]]
name = "comparison_bench"
path = "benchmark/comparison_bench.rs"

[[bin]]
name = "validation_test"
path = "benchmark/validation_test.rs"

[[bin]]
name = "udp_bench"
path = "benchmark/udp_bench.rs"
