[package]
name = "ssd-kv"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
parking_lot = "0.12"
crc32fast = "1.3"
mimalloc = { version = "0.1", default-features = false }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
crossbeam-channel = "0.5"
memmap2 = "0.9"
libc = "0.2"
once_cell = "1.19"
itoa = "1.0"
dashmap = "6"
lru = "0.12"

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.12", optional = true }
aya-log = { version = "0.2", optional = true }
io-uring = "0.6"

[features]
default = []
ebpf = ["aya", "aya-log"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"
#
#[[bench]]
#name = "throughput"
#harness = false
#
#[[bin]]
#name = "redis_vs_aerospike"
#path = "benchmark/redis_vs_aerospike.rs"
